# erc20

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: erc20.rs  lib.rs  template.rs
runtime/wasm/: Cargo.toml
src/: chain_spec.rs  main.rs
